@startuml



  namespace view {
      class view.GamePanel {
          + GamePanel(mainView: MainView)
          + addBug(bug: Bug)
          + doDrawing(g: Graphics)
          + drawGame(g: Graphics)
          + enterPressed(e: KeyEvent)
          + getMouseLocationX(): int
          + getMouseLocationY(): int
          + handleClick(x: int, y: int)
          + paintComponent(g: Graphics)
          + removeAllBugs()
          + removeBug(bug: Bug)
      }
    }
  

  namespace view {
      class view.HUDPanel {
          - count : JLabel
          - gameOver : JLabel
          - highScore : JLabel
          - imgHUD : Image
          - level : JLabel
          - timer : JLabel
          - victory : JLabel
          + HUDPanel()
          + changeCount(s: String)
          + changeLevel(s: String)
          + changeTimer(s: String)
          + doDrawing(g: Graphics)
          + drawHUD(g: Graphics)
          + hideGameOver()
          + hideVictory()
          + paintComponent(g: Graphics)
          + printGameOver()
          + printHighScore(highScore: int)
          + printVictory()
      }
    }
  

 namespace view {
      class view.MainView {
          - layeredPane : JLayeredPane
          + MainView(mainController: MainController)
          + addGamePanel(gp: GamePanel, hp : HUDPanel)
          + addMenuPanel(mp: MenuPanel, menuController: MenuController)
          + addPausePanel(pp: PausePanel, gameController : GameController)
          + getGamePanel() : GamePanel
          + getHudPanel() : HUDPanel
          + getMainController(): MainController
          + initializeView()
          + nextCursor()
          + removePausePanel()
          + setNormalSwatter()
          + setSwatSwatter()
      }
    }
  

  namespace view {
      class view.MenuPanel {
          - effectEnable : boolean
          - effectsButton : JButton
          - imgMenu: Image
          - leftArrowButton : JButton
          - musicButton : JButton
          - musicEnable : boolean
          - rightArrowButton : JButton
          - startButton : JButton
          + MenuPanel()
          + doDrawing(g: Graphics)
          + drawMenu()
          + getEffectsButton() : JButton
          + getLeftArrowButton() : JButton
          + getMusicButton() : JButton
          + getRightArrowButton() : JButton
          + getStartButton() : JButton
          + paintComponent(g: Graphics)
          + setEffectEnable(effectEnable : boolean )
          + setMusicEnable(musicEnable : boolean)
      }
    }
  

  namespace view {
      class view.PausePanel {
          - effectEnable : boolean
          - effectsButton : JButton
          - exitButton : JButton
          - imgPause : Image
          - musicButton : JButton
          - musicEnable : boolean
          - pause : JLabel
          - resumeButton : JButton
          + PausePanel()
          + doDrawing(g: Graphics)
          + drawMenu()
          + getEffectsButton() : JButton
          + getExitButton() : JButton
          + getMusicButton() : JButton
          + getResumeButton() : JButton
          + paintComponent(g: Graphics)
          + setEffectEnable(effectEnable : boolean)
          + setMusicEnable(musicEnable : boolean)
      }
    }
  

  namespace view {
      class view.Swatter {
          - imgIndex : double
          - imgsNormal : ArrayList<Image>
          - imgsSwat : ArrayList<Image>
          - normalAnimation : boolean
          - swatAnimation : boolean
          + Swatter()
          + getImg() : Image
          + setNormalAnimation(normalAnimation: boolean)
          + setSwatAnimation(swatAnimation : boolean)
      }
    }
  

  view.GamePanel -up-|> javax.swing.JPanel
  view.GamePanel o-- view.MainView : mainView
  view.HUDPanel -up-|> javax.swing.JPanel
  view.MainView -up-|> javax.swing.JFrame
  view.MainView o-- view.GamePanel : gamePanel
  view.MainView o-- view.HUDPanel : hudPanel
  view.MainView o-- controller.MainController : mainController
  view.MainView o-- view.MenuPanel : menuPanel
  view.MainView o-- view.PausePanel : pausePanel
  view.MainView o-- view.Swatter : swatter
  view.MenuPanel -up-|> javax.swing.JPanel
  view.PausePanel -up-|> javax.swing.JPanel
    view.GamePanel o-- model.Bug : bugs



@enduml
